# pipeshub-ai

./: .dockerignore  .gitignore  .spectral.yaml  CONNECTOR_INTEGRATION_PLAYBOOK.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cloud  Dockerfile.integration  README.md  cspell.json
.gemini/: config.yaml  styleguide.md
.github/scripts/: check-route-coverage.py  route-coverage-config.yaml
.github/workflows/: integration-tests.yml  main.yml  openapi-validator.yml  unit-test.yml  weekly-coverage.yml
backend/: env.template
backend/nodejs/: .gitignore
backend/python/: .coveragerc  .gitignore  Dockerfile  env.template  pyproject.toml  pytest.ini
deployment/docker-compose/: docker-compose.dev.neo4j.yml  docker-compose.dev.yml  docker-compose.integration.arango.yml  docker-compose.integration.neo4j.yml  docker-compose.prod.yml  env.template
frontend/: index.html  package-lock.json  package.json  vite.config.ts
integration-tests/: .env.example  README.md  conftest.py  env.local.template  env.prod.template  pyproject.toml  pytest.ini  sample_report.html
integration-tests/connectors/: conftest.py
integration-tests/connectors/azure_blob/: azure_blob_integration_test.py
integration-tests/connectors/azure_files/: azure_files_integration_test.py
integration-tests/connectors/gcs/: gcs_integration_test.py
integration-tests/connectors/s3/: s3_integration_test.py
integration-tests/helper/: graph_assertions.py  integration_report.py  local_auth.py  pipeshub_client.py  storage_helpers.py
integration-tests/sample-data/: sample_data.py
scripts/: Makefile
(+1530 files in other folders)
